tests/ui/const-generics/mgca/size-of-generic-ptr-in-array-len.stderr
error: function items cannot be used as const args
  --> $DIR/size-of-generic-ptr-in-array-len.rs:6:9
   |
LL |     [0; size_of::<*mut T>()];
   |         ^^^^^^^^^^^^^^^^^

error: tuple constructor with invalid base path
  --> $DIR/size-of-generic-ptr-in-array-len.rs:6:9
   |
LL |     [0; size_of::<*mut T>()];
   |         ^^^^^^^^^^^^^^^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/size-of-generic-ptr-in-array-len.rs:9:32
   |
LL |     [0; const { size_of::<*mut T>() }];
   |                                ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 3 previous errors

